# mqtt-room-presence

./: .dockerignore  .gitignore  Dockerfile  aerich.ini  docker-compose.yaml  package-lock.json  package.json  positions.csv  pyproject.toml  requirements.txt  research-2.ipynb  research-3.ipynb  research-4.ipynb  research.ipynb  runserver.py  schema.graphql  signals.csv
api/: requirements.txt
api/api/: api.py  events.py  heartbeat.py  learn.py  models.py  predict.py  sensor.py
client/: codegen.yml  package-lock.json  package.json  schema.graphql
client/public/: index.html
client/src/: App.tsx  index.tsx
client/src/api/: devices.graphql  rooms.graphql  scanners.graphql
client/src/components/ConfirmDialog/: ConfirmDialog.tsx
client/src/components/ErrorDetails/: ErrorDetails.tsx
client/src/components/PageTitle/: PageTitle.tsx
client/src/intl/: helpers.tsx
client/src/store/: store.ts
client/src/types/: common.ts
migrations/models/: 0_20210324140044_init.sql  0_20210913111311_init.sql  1_20210324140155_update.sql  1_20210913112558_update.sql  2_20211121062654_update.sql  3_20211213071614_update.sql
research/: regenerate-heartbeats.ipynb  research-2.ipynb  research-current-algo.ipynb  research.ipynb
research/data/: positions-long.csv  signals-long.csv
server/: api.py  config.py  constants.py  eventbus.py  events.py  heartbeat.py  kalman.py  learn.py  models.py  mqtt.py  predict.py  sensor.py  serializers.py  server.py  service.py  socketio.py  utils.py
server/config/: __init__.py  base.py
tests/: test_mqtt_room_presence.py
(+25 files in other folders)
