[tool.poetry]
name = "mqtt-room-presence"
version = "0.1.0"
description = ""
authors = ["Artem Artemev <viiv.c58@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
scikit-learn = "^0.24.1"
python-rapidjson = "^1.0"
asyncio-mqtt = "^0.8.1"
python-socketio = "^5.0.4"
python-dotenv = "^0.15.0"
tortoise-orm = "^0.16.21"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
