[tool.poetry]
name = "mqtt-room-presence"
version = "0.1.0"
description = ""
authors = ["Artem Artemev <viiv.c58@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.1"
asyncio-mqtt = "^0.8.1"
python-dotenv = "^0.15.0"
tortoise-orm = "^0.16.21"
pydantic = "^1.8.1"
jsons = "^1.4.0"
async_lru = "^1.0.2"
aerich = "^0.5.1"
pandas = "^1.2.3"
ariadne = "^0.14.0"
starlette = "^0.17.1"
uvicorn = "^0.16.0"
python-dateutil = "^2.8.2"
websockets = "^10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
pylint = "^2.7.2"
matplotlib = "^3.3.4"
seaborn = "^0.11.2"
xgboost = "^1.4.2"
imbalanced-learn = "^0.8.0"
ipykernel = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
